// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluggablePivotTable getExtendedReferencePoint given an empty reference point should return a new reference point with pivotTable UI config 1`] = `
Object {
  "buckets": Object {
    "attribute": Object {
      "accepts": Array [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": false,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-rows.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": Object {
        "date": 1,
      },
      "title": "Rows",
    },
    "columns": Object {
      "accepts": Array [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": false,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-columns.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": Object {
        "date": 1,
      },
      "title": "Columns",
    },
    "filters": Object {
      "accepts": Array [
        "attribute",
        "date",
      ],
      "allowsReordering": false,
      "enabled": true,
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": Object {
        "date": 1,
      },
    },
    "measures": Object {
      "accepts": Array [
        "metric",
        "fact",
        "attribute",
      ],
      "allowsDuplicateItems": true,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-measures.svg",
      "isShowInPercentEnabled": false,
      "isShowInPercentVisible": true,
      "itemsLimit": 20,
      "title": "Measures",
    },
  },
  "exportConfig": Object {
    "supported": true,
  },
  "openAsReport": Object {
    "supported": false,
  },
  "recommendations": Object {},
  "supportedOverTimeComparisonTypes": Array [
    "same_period_previous_year",
    "previous_period",
  ],
}
`;

exports[`PluggablePivotTable getExtendedReferencePoint given multipleMetricsAndCategoriesReferencePoint should return a new reference point with pivotTable UI config 1`] = `
Object {
  "buckets": Object {
    "attribute": Object {
      "accepts": Array [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": false,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-rows.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": Object {
        "date": 1,
      },
      "title": "Rows",
    },
    "columns": Object {
      "accepts": Array [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": false,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-columns.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": Object {
        "date": 1,
      },
      "title": "Columns",
    },
    "filters": Object {
      "accepts": Array [
        "attribute",
        "date",
      ],
      "allowsReordering": false,
      "enabled": true,
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": Object {
        "date": 1,
      },
    },
    "measures": Object {
      "accepts": Array [
        "metric",
        "fact",
        "attribute",
      ],
      "allowsDuplicateItems": true,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-measures.svg",
      "isShowInPercentEnabled": false,
      "isShowInPercentVisible": true,
      "itemsLimit": 20,
      "title": "Measures",
    },
  },
  "exportConfig": Object {
    "supported": true,
  },
  "openAsReport": Object {
    "supported": false,
  },
  "recommendations": Object {},
  "supportedOverTimeComparisonTypes": Array [
    "same_period_previous_year",
    "previous_period",
  ],
}
`;

exports[`PluggablePivotTable getExtendedReferencePoint given simpleStackedReferencePoint should return a new reference point with pivotTable UI config 1`] = `
Object {
  "buckets": Object {
    "attribute": Object {
      "accepts": Array [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": false,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-rows.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": Object {
        "date": 1,
      },
      "title": "Rows",
    },
    "columns": Object {
      "accepts": Array [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": false,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-columns.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": Object {
        "date": 1,
      },
      "title": "Columns",
    },
    "filters": Object {
      "accepts": Array [
        "attribute",
        "date",
      ],
      "allowsReordering": false,
      "enabled": true,
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": Object {
        "date": 1,
      },
    },
    "measures": Object {
      "accepts": Array [
        "metric",
        "fact",
        "attribute",
      ],
      "allowsDuplicateItems": true,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-measures.svg",
      "isShowInPercentEnabled": true,
      "isShowInPercentVisible": true,
      "itemsLimit": 20,
      "title": "Measures",
    },
  },
  "exportConfig": Object {
    "supported": true,
  },
  "openAsReport": Object {
    "supported": false,
  },
  "recommendations": Object {},
  "supportedOverTimeComparisonTypes": Array [
    "same_period_previous_year",
    "previous_period",
  ],
}
`;

exports[`PluggablePivotTable getExtendedReferencePoint should return a new reference point with ui config supporting mulple date dimensions when turned on 1`] = `
Object {
  "buckets": Object {
    "attribute": Object {
      "accepts": Array [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": true,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-rows.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": Object {
        "date": 20,
      },
      "title": "Rows",
    },
    "columns": Object {
      "accepts": Array [
        "attribute",
        "date",
      ],
      "allowsDuplicateDates": true,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-columns.svg",
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": Object {
        "date": 20,
      },
      "title": "Columns",
    },
    "filters": Object {
      "accepts": Array [
        "attribute",
        "date",
      ],
      "allowsReordering": false,
      "enabled": true,
      "isShowInPercentEnabled": false,
      "itemsLimit": 20,
      "itemsLimitByType": Object {
        "date": 1,
      },
    },
    "measures": Object {
      "accepts": Array [
        "metric",
        "fact",
        "attribute",
      ],
      "allowsDuplicateItems": true,
      "allowsReordering": true,
      "allowsSwapping": true,
      "canAddItems": true,
      "enabled": true,
      "icon": "local:table/bucket-title-measures.svg",
      "isShowInPercentEnabled": true,
      "isShowInPercentVisible": true,
      "itemsLimit": 20,
      "title": "Measures",
    },
  },
  "exportConfig": Object {
    "supported": true,
  },
  "openAsReport": Object {
    "supported": false,
  },
  "recommendations": Object {},
  "supportedOverTimeComparisonTypes": Array [
    "same_period_previous_year",
    "previous_period",
  ],
}
`;

exports[`createPivotTableConfig should create valid config with auto-resize if feature flag on 1`] = `
Object {
  "columnSizing": Object {
    "defaultWidth": "autoresizeAll",
  },
  "menu": Object {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig should create valid config with growToFit if feature flag on and environment !== dashboards 1`] = `
Object {
  "columnSizing": Object {},
  "menu": Object {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig should create valid config with growToFit if feature flag on and environment === analyticalDesigner 1`] = `
Object {
  "columnSizing": Object {
    "growToFit": false,
  },
  "menu": Object {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig should create valid config with growToFit if feature flag on and environment === dashboards 1`] = `
Object {
  "columnSizing": Object {
    "growToFit": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig should create valid config with manualResizing if feature flag off and configs are provided 1`] = `
Object {
  "columnSizing": Object {},
  "menu": Object {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig should create valid config with manualResizing if feature flag on and configs are empty 1`] = `
Object {
  "columnSizing": Object {},
  "menu": Object {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig should create valid config with manualResizing if feature flag on and configs are not defined 1`] = `
Object {
  "columnSizing": Object {},
  "menu": Object {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig should create valid config with manualResizing if feature flag on and configs are provided 1`] = `
Object {
  "columnSizing": Object {
    "columnWidths": Array [
      Object {
        "attributeColumnWidthItem": Object {
          "attributeIdentifier": "294512a6b2ed4be8bd3948dd14db1950",
          "width": Object {
            "value": 740,
          },
        },
      },
    ],
  },
  "menu": Object {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig should create valid config with menus for non-dashboard env 1`] = `
Object {
  "columnSizing": Object {},
  "menu": Object {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig should create valid config with menus for undefined env 1`] = `
Object {
  "columnSizing": Object {},
  "menu": Object {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": undefined,
}
`;

exports[`createPivotTableConfig should create valid config with separators 1`] = `
Object {
  "columnSizing": Object {},
  "menu": Object {
    "aggregations": true,
    "aggregationsSubMenu": true,
  },
  "separators": Object {
    "decimal": ".",
    "thousand": "-",
  },
}
`;

exports[`createPivotTableConfig should create valid config without menus for dashboard env 1`] = `
Object {
  "columnSizing": Object {},
  "separators": undefined,
}
`;
